--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.10.1
 aiohttp==3.6.3
+amqp==5.0.6
 appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.4.2
@@ -8,15 +9,22 @@ attrs==20.2.0
 autobahn==21.3.1
 Automat==20.2.0
 Babel==2.8.0
+billiard==3.6.4.0
+celery==5.0.5
 certifi==2020.6.20
 cffi==1.14.5
 channels==3.0.3
 chardet==3.0.4
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 colorama==0.4.4
 configparser==5.0.1
 constantly==15.1.0
 crayons==0.4.0
 cryptography==3.4.7
+cycler==0.10.0
 daphne==3.0.1
 defusedxml==0.7.1
 distlib==0.3.1
@@ -31,15 +39,21 @@ first==2.0.2
 hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
+install==1.3.4
 isort==5.6.4
+kiwisolver==1.3.1
+kombu==5.0.2
 lazy-object-proxy==1.4.3
 Markdown==3.3.4
+matplotlib==3.3.4
 mccabe==0.6.1
 memcache==0.2.0
+mpmath==1.2.1
 multidict==4.7.6
 numpy==1.19.4
 oauthlib==3.1.0
 Pillow==8.1.0
+prompt-toolkit==3.0.18
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -47,8 +61,11 @@ pycparser==2.20
 PyJWT==2.0.1
 pylint==2.6.0
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
+redis-server==6.0.9
 requests==2.25.1
 requests-oauthlib==1.3.0
 selenium==3.141.0
@@ -57,12 +74,15 @@ six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+sympy==1.7.1
 toml==0.10.2
 Twisted==21.2.0
 txaio==21.2.1
 typing-extensions==3.7.4.3
 urllib3==1.25.10
+vine==5.0.0
 virtualenv==20.4.0
+wcwidth==0.2.5
 webdriver-manager==3.3.0
 wrapt==1.12.1
 yarl==1.5.1
