--- a/requirements.txt
+++ b/requirements.txt
@@ -31,11 +31,13 @@ distlib==0.3.1
 Django==3.1.6
 django-multipleselectfield==0.2.0.post2
 django-multiselectfield==0.1.12
+django-sendgrid-v5==0.9.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.12.2
 emoji==0.6.0
 filelock==3.0.12
 first==2.0.2
+future==0.18.2
 hyperlink==21.0.0
 idna==2.10
 incremental==21.3.0
@@ -63,17 +65,20 @@ pylint==2.6.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-http-client==3.3.2
 python3-openid==3.2.0
 pytz==2020.1
 redis-server==6.0.9
 requests==2.25.1
 requests-oauthlib==1.3.0
 selenium==3.141.0
+sendgrid==6.6.0
 service-identity==18.1.0
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+starkbank-ecdsa==1.1.0
 sympy==1.7.1
 toml==0.10.2
 Twisted==21.2.0
