--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ python-http-client==3.3.2
 python3-openid==3.2.0
 pytz==2020.1
 redis-server==6.0.9
+reportlab==3.5.67
 requests==2.25.1
 requests-oauthlib==1.3.0
 selenium==3.141.0
@@ -90,5 +91,6 @@ virtualenv==20.4.0
 wcwidth==0.2.5
 webdriver-manager==3.3.0
 wrapt==1.12.1
+xlwt==1.3.0
 yarl==1.5.1
 zope.interface==5.3.0
